objects/Participant_Enrollment__c.object
<CustomObject>
    <description>Participant Profile</description>
    <fields>
        <fullName>Clinical_Trial_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Trial Profile</label>
        <referenceTo>Clinical_Trial_Profile__c</referenceTo>
        <relationshipLabel>Participant Enrollments</relationshipLabel>
        <relationshipName>Participant_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consulted_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date when the Potential Participant was consulted</inlineHelpText>
        <label>Consulted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consulted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the Potential Participant been consulted on the clinical trial?</inlineHelpText>
        <label>Consulted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacted_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date when contact has been made with the Potential Participant</inlineHelpText>
        <label>Contacted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has contact been made with the Potential Participant?</inlineHelpText>
        <label>Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Potential Participant went through Eligible questions with PI</inlineHelpText>
        <label>Eligible Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opportunity for PI to ask more questions than was done in the Pre-eligilibity screening to confirm Potential Participant eligibility in a clinical trial</inlineHelpText>
        <label>Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolled_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date enrollment completed</inlineHelpText>
        <label>Enrolled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Potential Participant get enrolled into the Clinical Trial</inlineHelpText>
        <label>Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Account__c</fullName>
        <description>For Workflow Emails</description>
        <encryptionScheme>None</encryptionScheme>
        <label>HCP Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Contact_HCPEnroll__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Testing</description>
        <label>HCP Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Enrollments (HCP Contact)</relationshipLabel>
        <relationshipName>Participant_Enrollments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCP_Contact__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; HCP__r.HCP_Contact__c ,HCP__r.HCP_Contact__r.FirstName&amp;&quot; &quot;&amp;  HCP__r.HCP_Contact__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCP Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCP</label>
        <referenceTo>HCP_Enrollment__c</referenceTo>
        <relationshipLabel>Participant Enrollments</relationshipLabel>
        <relationshipName>Participant_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IVRS_IWRS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Obtain the Interactive Voice Response System (IVRS) Number/ Interactive Web Response System (IWRS) Number for the  participant</inlineHelpText>
        <label>IVRS/IWRS#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informed_Consent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Informed Consent was provided</inlineHelpText>
        <label>Informed Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Informed_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Potential Participant provide informed consent?</inlineHelpText>
        <label>Informed Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date when the Potential Participant identified interest</inlineHelpText>
        <label>Interested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Potential Participant interested in participating in the clinical trial?</inlineHelpText>
        <label>Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Virtual_Study_Site__c</fullName>
        <formula>Study_Site__r.Is_Virtual_Study_Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Virtual Study Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Status_Changed_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Status Changed Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Record_Review_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Record Review Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Medical_Record_Review_Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medical Record Review Completed by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Enrollments (Medical Record Review Completed by)</relationshipLabel>
        <relationshipName>Participant_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Record_Review_Completedby_Name__c</fullName>
        <description>Medical Record Review Completed by</description>
        <formula>Medical_Record_Review_Completed_by__r.FirstName &amp; &quot; &quot; &amp;  Medical_Record_Review_Completed_by__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Medical Record Review Completed by</inlineHelpText>
        <label>Medical Record Review Completed by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Record_Review_Status__c</fullName>
        <label>Medical Record Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Suitable_Site__c</fullName>
        <inlineHelpText>After the Potential Participant reviews the list of available sites, if they do not like any, then they can select this and it ends the referral process.</inlineHelpText>
        <label>No Suitable Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Enrollment_Notes__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Free form field to add in any additional comments concerning non-enrollment</inlineHelpText>
        <label>Non-Enrollment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Enrollment_Reason__c</fullName>
        <label>Non-Enrollment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Participant_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site No Longer Accepting Referrals</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Meet Pre-Screening Eligibility</fullName>
                </value>
                <value>
                    <fullName>Declined Practitioner</fullName>
                </value>
                <value>
                    <fullName>PI Decision</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Show For Initial Visit</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Sign Consent</fullName>
                </value>
                <value>
                    <fullName>Failed Inclusion/Exclusion Criteria</fullName>
                </value>
                <value>
                    <fullName>Patient Declined</fullName>
                </value>
                <value>
                    <fullName>Visit Out Of Window</fullName>
                </value>
                <value>
                    <fullName>Patient Decision</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Could not schedule visit</fullName>
                    <isActive>false</isActive>
                    <label>Could not schedule visit</label>
                </value>
                <value>
                    <fullName>Did not respond to contact attempts</fullName>
                    <isActive>false</isActive>
                    <label>Did not respond to contact attempts</label>
                </value>
                <value>
                    <fullName>Failed screening / does not qualify</fullName>
                    <isActive>false</isActive>
                    <label>Failed screening / does not qualify</label>
                </value>
                <value>
                    <fullName>No longer interested</fullName>
                    <isActive>false</isActive>
                    <label>No longer interested</label>
                </value>
                <value>
                    <fullName>No show for scheduled visit</fullName>
                    <isActive>false</isActive>
                    <label>No show for scheduled visit</label>
                </value>
                <value>
                    <fullName>Not eligible</fullName>
                    <isActive>false</isActive>
                    <label>Not eligible</label>
                </value>
                <value>
                    <fullName>Not willing to sign informed consent</fullName>
                    <isActive>false</isActive>
                    <label>Not willing to sign informed consent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Referral_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date non-referral reason identified</inlineHelpText>
        <label>Non-Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Referral_Notes__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Free form field to add in any additional comments concerning non-referral</inlineHelpText>
        <label>Non-Referral Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Referral_Reason__c</fullName>
        <label>Non- Referral Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Had Discussion, Not Interested</fullName>
                </value>
                <value>
                    <fullName>No Longer Interested</fullName>
                </value>
                <value>
                    <fullName>Failed Pre-Eligibility Screening</fullName>
                </value>
                <value>
                    <fullName>Did not pass chart review</fullName>
                    <isActive>false</isActive>
                    <label>Did not pass chart review</label>
                </value>
                <value>
                    <fullName>Did not pass pre-eligibility</fullName>
                    <isActive>false</isActive>
                    <label>Did not pass pre-eligibility</label>
                </value>
                <value>
                    <fullName>No suitable site</fullName>
                    <isActive>false</isActive>
                    <label>No suitable site</label>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                    <isActive>false</isActive>
                    <label>Not interested</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Stopped at agreement for T&amp;C / Refer</fullName>
                    <isActive>false</isActive>
                    <label>Stopped at agreement for T&amp;C / Refer</label>
                </value>
                <value>
                    <fullName>Unable to consult</fullName>
                    <isActive>false</isActive>
                    <label>Unable to consult</label>
                </value>
                <value>
                    <fullName>Unable to contact</fullName>
                    <isActive>false</isActive>
                    <label>Unable to contact</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_In_Referred_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Potential Participant opted into being referred</inlineHelpText>
        <label>Opt-In Referred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_In_Referred__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the Potential Participant opt-in to allow being referred to the Principal Investigator associated with the Site selected earlier?</inlineHelpText>
        <label>Opt-In Referred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_T_C_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Potential Participant opted into the T&amp;Cs</inlineHelpText>
        <label>Opt-In T&amp;C Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_In_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the Potential Participant opt-in to the Terms and Conditions of clinical trial?</inlineHelpText>
        <label>Opt-In T&amp;C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PI_Account__c</fullName>
        <description>For Workflow Emails</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PI Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Enrollments (PI)</relationshipLabel>
        <relationshipName>Participant_Profile2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Enrollments (Participant Contact)</relationshipLabel>
        <relationshipName>PE_Participant_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Enrollment_ID__c</fullName>
        <displayFormat>ParticipantE-{000000}</displayFormat>
        <label>Participant Enrollment ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Participant_ID_randomized_ID__c</fullName>
        <description>HCP/Physician Participant ID randomized ID</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>HCP/Physician Participant ID randomized ID</inlineHelpText>
        <label>Participant ID (randomized ID)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Identified_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date when HCP/3rd Party identifies Potential Participant</inlineHelpText>
        <label>Participant Identified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Participant_Key__c</fullName>
        <description>Participant Key = Participant number + NCT number</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Participant Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Participant_Name__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Participant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Status_Last_Changed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Participant Status Last Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Participant_Status__c</fullName>
        <description>HCP/Physician Participant Participant Status</description>
        <inlineHelpText>HCP/Physician Participant Participant Status</inlineHelpText>
        <label>Participant Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Referral Sent to PI</fullName>
                </value>
                <value>
                    <fullName>Excluded from Referring</fullName>
                </value>
                <value>
                    <fullName>Referral Accepted</fullName>
                </value>
                <value>
                    <fullName>Contact Successful</fullName>
                </value>
                <value>
                    <fullName>Eligibility Passed</fullName>
                </value>
                <value>
                    <fullName>Screening Complete</fullName>
                </value>
                <value>
                    <fullName>Enrollment Success</fullName>
                </value>
                <value>
                    <fullName>Referral On Hold</fullName>
                </value>
                <value>
                    <fullName>Contact Attempt In Progress</fullName>
                </value>
                <value>
                    <fullName>Screening In Progress</fullName>
                </value>
                <value>
                    <fullName>Referral Declined</fullName>
                </value>
                <value>
                    <fullName>Contact Failed</fullName>
                </value>
                <value>
                    <fullName>Eligibility Failed</fullName>
                </value>
                <value>
                    <fullName>Screening Failed</fullName>
                </value>
                <value>
                    <fullName>Enrollment Failed</fullName>
                </value>
                <value>
                    <fullName>Failed Referral</fullName>
                </value>
                <value>
                    <fullName>Failed Review</fullName>
                </value>
                <value>
                    <fullName>Pending Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant_Surname__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Participant Surname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Participant Enrollments</relationshipLabel>
        <relationshipName>Participant_Profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pass_Chart_Review__c</fullName>
        <inlineHelpText>Chart review trying to identify Potential Participant.  Documented per potential participant?</inlineHelpText>
        <label>Pass Chart Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Eligibility_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the pre-eligibility screening questionnaire was completed</inlineHelpText>
        <label>Pre-Eligibility Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Potential Participant pass the pre-eligibility screening questionnaire?</inlineHelpText>
        <label>Pre-Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_screening_Status__c</fullName>
        <label>Pre-screening Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Randomized_Date__c</fullName>
        <description>HCP/Physician Participant Randomized Date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>HCP/Physician Participant Randomized Date</inlineHelpText>
        <label>Randomized (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Randomized__c</fullName>
        <label>Randomized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Completed by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Enrollments (Pre-Screening  Completed by)</relationshipLabel>
        <relationshipName>Participant_Enrollments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Completedby_Name__c</fullName>
        <description>Referral Completed by</description>
        <formula>Referral_Completed_by__r.FirstName &amp; &quot; &quot; &amp;
Referral_Completed_by__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Referral Completed by</inlineHelpText>
        <label>Referral Completed by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Referral ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <description>HCP/Physician Participant Referral Source</description>
        <inlineHelpText>HCP/Physician Participant Referral Source</inlineHelpText>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd_Party</fullName>
                    <label>3rd Party</label>
                </value>
                <value>
                    <fullName>ACOE</fullName>
                </value>
                <value>
                    <fullName>Autocruitment</fullName>
                </value>
                <value>
                    <fullName>ePR</fullName>
                </value>
                <value>
                    <fullName>HCP</fullName>
                </value>
                <value>
                    <fullName>HCP Prescreen Log</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Potential Participant referred to a Site / PI</inlineHelpText>
        <label>Referred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referred__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the Potential Participant been successfully referred to a Site / PI?</inlineHelpText>
        <label>Referred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Screening_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date screening was completed</inlineHelpText>
        <label>Screening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Screening_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Screening ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Potential Participant pass screening?</inlineHelpText>
        <label>Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date and time the site was selected</inlineHelpText>
        <label>Site Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>Study_Site__r.Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Category__c</fullName>
        <formula>IF(OR(
ISPICKVAL(Participant_Status__c ,&apos;Identified&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Contacted&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Consulted&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Interested&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Pre-Eligibility&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Opt-In Refer&apos;)), 
&apos;In Referral Process&apos;, 
IF(OR(
ISPICKVAL(Participant_Status__c ,&apos;Failed Referral&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Failed to Enroll&apos;)),
&apos;Failed to Refer&apos;,
IF(OR(
ISPICKVAL(Participant_Status__c ,&apos;New Referral&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Eligible&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Visit Completed&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Informed Consent&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Screening&apos;)),
&apos;In Enrollment Process&apos;,
IF(OR(
ISPICKVAL(Participant_Status__c ,&apos;Enrolled&apos;),
ISPICKVAL(Participant_Status__c ,&apos;Randomized&apos;)),
&apos;Enrolled&apos;, &apos;Other&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Hub_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Hub Log</label>
        <referenceTo>Integration_Log__c</referenceTo>
        <relationshipLabel>Study_Hub Integration Enrollments</relationshipLabel>
        <relationshipName>Study_Hub_Integration_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Name__c</fullName>
        <formula>Study_Site__r.Clinical_Trial_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Participant Enrollments</relationshipLabel>
        <relationshipName>Participant_Profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Study_Site__r.Clinical_Trial_Profile__c,   Study_Site__r.Clinical_Trial_Profile__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Accepted_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms and Conditions Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Potential Participant show up to the scheduled visit?</inlineHelpText>
        <label>Visit Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gclid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>gclid</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>utm-campaign</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>utm-content</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>utm-medium</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>utm-source</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>utm-term</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmz__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>utmz</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>Participant Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Participant_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Participant__c</columns>
        <columns>Participant_Name__c</columns>
        <columns>Patient_ID__c</columns>
        <columns>Referral_Source__c</columns>
        <columns>Study_Site__c</columns>
        <columns>Study__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Minus_Testing</fullName>
        <columns>NAME</columns>
        <columns>Participant_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Participant__c</columns>
        <columns>Participant_Name__c</columns>
        <columns>Patient_ID__c</columns>
        <columns>Referral_Source__c</columns>
        <columns>Study_Site__c</columns>
        <columns>Study__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clinical_Trial_Profile__c</field>
            <operation>notEqual</operation>
            <value>S-30368</value>
        </filters>
        <label>All Minus Testing</label>
    </listViews>
    <listViews>
        <fullName>Participants_by_Stage</fullName>
        <columns>NAME</columns>
        <columns>Referral_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>Participants by Stage</label>
    </listViews>
</CustomObject>